[project]
name = "lambdo"
version = "0.1.0"
description = "A CLI tool that enables you to interact with the Lambda Labs APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
lambdo = "lambdo.client:main"
